log/build_2021-06-01_12-19-04/wasp_mini_controller/stderr.log
  File "/home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller/main.py", line 97
    def euler_from_quaternion([quaternion.x,quaternion.y,quaternion.z,quaternion.w]):
                              ^
SyntaxError: invalid syntax

